# sdarray

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  startup.py
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: modules.doctree  sdarray.doctree
.github/workflows/: test.yml  tests.yml
_apidoc/: modules.html  sdarray.html
_modules/: index.html
_modules/sdarray/: accessor.html  arrayfact.html  arrayfunc.html  selector.html
_sources/: index.rst.txt  readme.rst.txt
_sources/_apidoc/: modules.rst.txt  sdarray.rst.txt
docs/: build  conf.py  index.md
etc/: configure  publish  startup.py
sdarray/: __init__.py  accessor.py  arrayfact.py  arrayfunc.py  config.py  coords.py  creator.py  dims.py  selector.py  specs.py  utils.py
sdarray/array/: __init__.py  array.py  coords.py  dims.py  mixins.py  utils.py
sdarray/config/: coords.toml
tests/: test_coords.py  test_dims.py  test_init.py  test_metadata.py  test_selector.py
tests/array/: test_coords.py
