[tool.poetry]
name = "sdarray"
version = "0.1.3"
description = "Common single-dish data structure for radio astronomy"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sdarray/sdarray"
documentation = "https://sdarray.github.io/sdarray"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
astropy = "^4.3"
numpy = "^1.19"
pandas = "^1.1"
typing-extensions = "^3.7"
xarray = "^0.18"
xarray-dataclasses = "^0.4"

[tool.poetry.dev-dependencies]
black = "^21.8b"
flake8 = "^3.9"
ipython = "^7.27"
pydata-sphinx-theme = "^0.6"
pytest = "^6.2"
sphinx = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
