[tool.poetry]
name = "sdarray"
version = "0.1.3"
description = "Common single-dish data structure for radio astronomy"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sdarray/sdarray"
documentation = "https://sdarray.github.io/sdarray"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
numpy = "^1.19"
typing-extensions = "^3.10"
xarray-dataclasses = "^0.6"

[tool.poetry.dev-dependencies]
black = "^21.10b"
ipython = "^7.29"
pydata-sphinx-theme = "^0.7"
pytest = "^6.2"
sphinx = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
