[tool.poetry]
name = "sdarray"
version = "0.1.3"
description = "Common single-dish data structure for radio astronomy"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["astronomy", "radio-astronomy", "single-dish", "xarray"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sdarray/sdarray"
documentation = "https://sdarray.github.io/sdarray"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
astropy = "^4.3"
numpy = "^1.21"
typing-extensions = "^3.10"
xarray-dataclasses = "^1.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
ipython = "^7.32"
myst-parser = "^0.17"
pydata-sphinx-theme = "^0.8"
pytest = "^7.0"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
