[metadata]
name = sdarray
version = 0.1.1
author = Akio Taniguchi
author_email = taniguchi@a.phys.nagoya-u.ac.jp
url = https://github.com/sdarray/sdarray
description = Python package for common single-dish data
long_description = file:README.md
long_description_content_type = text/markdown
keywords = astronomy, radio-astronomy, single-dish, python, xarray
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = sdarray
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy
    pandas
    xarray
    astropy
    netcdf4
    matplotlib
    dask[complete]
    toml
